--- a/index.html
+++ b/index.html
@@ -643,9 +643,9 @@ var arr = [
 '시골향2', '鄕', '시골향', '乡', '흰백', '白', '비수비', '匕', '언덕부방', '阝', '.', ' ', '시골 사람들이 등을 구부리고 앉아 훠궈를 숟갈로 건져먹는 언덕마을은 시골이다. 향수', '', 
 '이름명', '名', '저녁석', '夕', '입구', '口', '.', ' ', '.', ' ', '.', ' ', '저녁이 되어 사람이 잘 보이지 않아 입으로 사람 이름을 부를는 모양', '', 
 '풍속속', '俗', '사람인변', '亻', '골곡', '谷', '.', ' ', '.', ' ', '.', ' ', '사람이 사는 골짜기 마다 비밀하고 감추어진 풍속이 있다', '', 
-'거느릴령', '領', '명령령', '令', '머리혈', '頁', '.', ' ', '.', ' ', '.', ' ', '삼합집에 구부린 사람의 목숨을 살리라 죽이라 명령하는 사람의 머리 모양. 그 멀는 우두머리', '', 
+'거느릴령', '領', '명령령', '令', '머리혈', '頁', '.', ' ', '.', ' ', '.', ' ', '삼합집에 구부린 사람의 목숨을 살리라 죽이라 명령하는 사람의 머리 모양. 그 머리는 우두머리', '', 
 '명령령', '令', '삼합집', '亼', '병부절', '卩', '.', ' ', '.', ' ', '.', ' ', '삼합집에 구부린 사람의 목숨을 살리라 죽이라 명령하는 모습', '', 
-'거느릴통', '統', '실멱', '糸', '채울충', '充', '.', ' ', '.', ' ', '.', ' ', '실이 산도에서 양수가 흐르듯 흘러가게 거느린는 모습. 통솔', '', 
+'거느릴통', '統', '실멱', '糸', '채울충', '充', '.', ' ', '.', ' ', '.', ' ', '실이 산도에서 양수가 흐르듯 흘러가게 거느리는 모습. 통솔', '', 
 '채울충', '充', '기를육', '育', '어진사람인', '儿', '.', ' ', '.', ' ', '.', ' ', '산도를 통과한 아기의 머리가 산도를 가득 채우고 옆으로 양수가 흐르는 모습. 충분', '', 
 '공경경', '敬', '개구', '狗', '칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '귀가 쫑긋하고 입이 큰 개를 몽둥이로 쳐서 공경하게 만드는 모습', '', 
 '개구', '狗', '개견변', '犭', '글귀구', '句', '.', ' ', '.', ' ', '.', ' ', '개는 갠데 큰 개여서 올가미로 목을 잡아야 하는 큰 개 구', '', 
@@ -661,7 +661,7 @@ var arr = [
 '정사정', '政', '바를정', '正', '칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '올바르게 만드려고 몽둥이를 들고 치고 박고 싸우는 것이 정치이다', '', 
 '주인주', '主', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '등잔에 불이 켜진 모양. 등잔에 불을 켜는 사람이 주인다', '', 
 '지경계', '界', '밭전', '田', '끼일개', '介', '.', ' ', '.', ' ', '.', ' ', '두 밭 사이에 끼어 있어 밭의 경계를 나누는 모습. 경계', '', 
-'끼일개', '介', '사람인', '人', '두이', '二', '.', ' ', '.', ' ', '.', ' ', '사람이 사람 사이에 ㄲ어서 중개한다는 뜻', '', 
+'끼일개', '介', '사람인', '人', '두이', '二', '.', ' ', '.', ' ', '.', ' ', '사람이 사람 사이에 끼어서 중개한다는 뜻', '', 
 '한국한', '韓', '해빛날간', '倝', '클위', '偉', '.', ' ', '.', ' ', '.', ' ', '동쪽에서 해가 돋아 비치고 크고 위대한 나라 한국', '', 
 '한수한', '漢', '물수변', '氵', '진흙근', '菫', '.', ' ', '.', ' ', '.', ' ', '물과 진흙이 풍부한 한나라', '', 
 '가릴선', '選', '갈착', '辶', '병부절2', '㔾', '병부절2', '㔾', '함께공', '共', '.', ' ', '걸어가서 구부려 있는 두 범인 중 두 손으로 한 사람을 선택하는 모습. 선거', '', 
@@ -722,7 +722,7 @@ var arr = [
 '연고고', '故', '옛고', '古', '칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '십대에 걸쳐 내려온 싸움 이야기는 현재 현상의 원인을 알려준다. 연고', '', 
 '이을승', '承', '아들자', '子', '손수', '手', '물수', '水', '.', ' ', '.', ' ', '아들을 손에 잡고 물에 씻은 후 수건을 가진 사람에게 주어 물기를 닦게 한다. 기꺼이 준다. 승인한다. 허락한다', '', 
 '다행행', '幸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '죄인의 잡아 손에 수갑을 채운 모양. 죄인을 붙잡아서 다행이다', '', 
-'거짓가', '假', '사람인변', '亻', '주검시', '尸', '두이', '二', '창수', '殳', '.', ' ', '사람이 두터운 언덕에 가서 창으로 쳐서 광물을 얻는 모습. 광물로 세상에 없는 것 가짜이다. 가상', '', 
+'거짓가', '假', '사람인변', '亻', '주검시', '尸', '두이', '二', '창수', '殳', '.', ' ', '사람이 두터운 언덕에 가서 창으로 쳐서 광물을 얻는 모습. 광물로 세상에 없는 것 가상의 것을 만든다. 가상', '', 
 '법도도', '度', '집엄', '广', '스물입', '廿', '또우', '又', '.', ' ', '.', ' ', '집을 향해 돌을 손에 잡고 던져서 거리를 가늠한다. 계량한다. 도량형', '', 
 '법법', '法', '물수변', '氵', '갈거', '去', '.', ' ', '.', ' ', '.', ' ', '물흐르듯 사람이 걸어가야하는 법이다. 법은 물흐르듯 해야 한다. 법칙. 법규', '', 
 '법전', '典', '책책', '冊', '함께공', '共', '.', ' ', '.', ' ', '.', ' ', '법을 대나무 죽간책에 써서 말아 놓았다가 손으로 펴서 보는 법전', '', 
@@ -808,7 +808,7 @@ var arr = [
 '보전할보', '保', '사람인변', '亻', '입구', '口', '나무목', '木', '.', ' ', '.', ' ', '사람이 열매 있는 나무를 아끼며 보전하는 모습', '', 
 '불취', '吹', '입구', '口', '하품흠', '欠', '.', ' ', '.', ' ', '.', ' ', '입으로 하품하듯 무언가 부는 모습. 취타대', '', 
 '빌릴차', '借', '사람인변', '亻', '옛석', '昔', '.', ' ', '.', ' ', '.', ' ', '사람이 집에 먹을 것이 없어 햇볓에 말려 오래된 고기 육포를 빌린다는 뜻. 차용', '', 
-'살필성', '省', '적을소', '少', '눈목', '目', '.', ' ', '.', ' ', '.', ' ', '크기가 적은 것을 눈으로 자세히 살피는 모습. 성찰', '', 
+'살필성', '省', '적을소', '少', '눈목', '目', '.', ' ', '.', ' ', '.', ' ', '수가 적은 것을 잃어버려 찾기 위해 눈으로 자세히 살피는 모습. 성찰', '', 
 '살필찰', '察', '집면', '宀', '달월', '月', '달월', '月', '보일시', '示', '.', ' ', '산마루 사당 집에서 고기가 얹혀진 제사 그릇 상태를 살핀다. 관찰한다', '', 
 '쉴휴', '休', '사람인변', '亻', '나무목', '木', '.', ' ', '.', ' ', '.', ' ', '사람이 나무에 기대서 쉬는 모양. 휴식', '', 
 '쌓을저', '貯', '조개패', '貝', '집면', '宀', '고무래정', '丁', '.', ' ', '.', ' ', '돈될만한 것들을 집안에 쌓으려고 땅을 고무래로 고르는 모습. 저장', '', 
@@ -1966,6 +1966,27 @@ var arr = [
 '창모', '矛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날이 여럿 달린 창모양.', '', 
 '평평할견', '幵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '방책을 여러 개 나란히 놓으면 면이 평평해 보인다', '', 
 '고를균', '勻', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '평미래로 말의 표면을 고르게 하는 모습. 평균', '', 
+'쟁기뢰', '耒', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '날이 여러 개인 쟁기 모양', '', 
+'업업', '业', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '악기의 조율하는 부분. 악기를 다루는 악공은 전문 직업이다. 업이다.', '', 
+'언덕부', '阜', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무 너머로 바라다 보이는 언덕 봉우리 모양', '', 
+'칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '칼도가 방으로 사용될 때 글자', '', 
+'걸을착', '辶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '걸어가면 걸음이 끌리고 뒤에 발자국이 남는 모양', '', 
+'입벌릴감', '凵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '감이 떨어지기를 바라며 입을 위로 벌린 모양', '', 
+'덮을아', '覀', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '항아리를 덮는 덮개 모양', '', 
+'자촉거릴촉', '亍', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '걸을을 절룩거리며 걷는 모양', '', 
+'시골향', '乡', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '구부린 등으로 옹기 종기 모여 앉아 밥을 먹는 시골 사람들. 그 사람들이 사는 시골.', '', 
+'개견변', '犭', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '개견이 변으로 사용될 때 모양.', '', 
+'지금금', '今', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 무언가 삼키고 이제 지금 무엇을 먹을까 찾는 모습', '', 
+'더불여', '与', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람들이 더불어서 상아를 서로 들고 나누는 모습', '', 
+'춤출오', '吳', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입으로 노래부르고 흥에 겨워 몸을 이지러지게하는 춤', '', 
+'구기작', '勺', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '국자로 무언가 액체를 뜨는 모습', '', 
+'날비', '飞', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '새가 날개를 펴고 나는 모습', '', 
+'받들공', '廾', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '두손으로 무언가 받느는 모습', '', 
+'불화발', '灬', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '불화가 발로 사용될 때 모양', '', 
+'그릇명', '皿', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '피가 떨어질 때 받는 피그릇 모양', '', 
+'돼지머리계', '彑', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '돼지머리를 잘라 놓은 모양', '', 
+'수풀림', '林', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무와 나무가 빽빽한 숲 모양', '', 
+'공교할교', '丂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '공교한 기술을 부리는 갈고리 모양', '', 
 
 
 
