--- a/index.html
+++ b/index.html
@@ -944,11 +944,11 @@ var arr = [
 '홀로독', '獨', '개견변', '犭', '벌레촉', '蜀', '.', ' ', '.', ' ', '.', ' ', '개가 벌레, 기생충에 감염되면 무리에서 떨어져서 홀로지낸다. 독거', '', 
 '흩을산', '散', '포석', '腊', '칠복', '攵', '.', ' ', '.', ' ', '.', ' ', '오래 먹을 수 있는 육포를 몽둥이로 치면 육포가 흩어진다. 비산먼지', '', 
 '다만단', '但', '사람인변', '亻', '아침단', '旦', '.', ' ', '.', ' ', '.', ' ', '사람의 머리속에 아침에는 단지 하나의 생각이 든다', '', 
-'다만지', '只', '입구', '口', '여덟팔', '八', '.', ' ', '.', ' ', '.', ' ', '단지 한마리이 새만 두 팔로 잡을 수 있다.', '', 
+'다만지', '只', '입구', '口', '여덟팔', '八', '.', ' ', '.', ' ', '.', ' ', '단지 한 마리 새만 두 팔로 잡을 수 있다.', '', 
 '마땅당', '當', '향할향', '向', '여덟팔', '八', '밭전', '田', '.', ' ', '.', ' ', '기와집이 밭에 딱드러 맞게 지어진 모양. 당연', '', 
 '먼저선', '先', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '먼저 가려고 발을 내민 사람 모양. 선두', '', 
 '모름지기수', '須', '터럭삼', '彡', '머리혈', '頁', '.', ' ', '.', ' ', '.', ' ', '털이 얼굴에 나야 모름지기 남자다. ', '', 
-'반드시필', '必', '마음심변', '忄', '삐침별', '丿', '.', ' ', '.', ' ', '.', ' ', '마음속에 반드시 이루어 할 것에 표시를 한 모습. 필수', '', 
+'반드시필', '必', '마음심', '心', '삐침별', '丿', '.', ' ', '.', ' ', '.', ' ', '마음속에 반드시 이루어 할 것에 표시를 한 모습. 필수', '', 
 '비로소시', '始', '여자여', '女', '사사로울사', '厶', '입구', '口', '.', ' ', '.', ' ', '여자가 품에 아기를 안고 이유식을 아기 입에 먹이니 비로소 사람이 되었다', '', 
 '비록수', '雖', '도마뱀수', '虽', '새추', '隹', '.', ' ', '.', ' ', '.', ' ', '비록 하찮은 도마뱀 한마리 새 한마리도 소중하다', '', 
 '아닐부', '否', '아닐불', '不', '입구', '口', '.', ' ', '.', ' ', '.', ' ', '아직 싹이 돋지 않았다고 입으로 말하는 모습', '', 
@@ -963,7 +963,7 @@ var arr = [
 '같을약', '若', '풀초두', '艹', '오른우', '右', '.', ' ', '.', ' ', '.', ' ', '마음 먹은 것과 같은 풀, 약초를 캐서 오른손에 든 모양, 만약', '', 
 '같을여', '如', '여자여', '女', '입구', '口', '.', ' ', '.', ' ', '.', ' ', '여자들이 입으로 자기 생각과 맞다고 맞장구를 친다', '', 
 '견줄비', '比', '비수비', '匕', '비수비', '匕', '.', ' ', '.', ' ', '.', ' ', '숟가락과 숟가락을 비교한다', '', 
-'다를별', '別', '입구', '口', '칼도', '刀', '칼도방', '刂', '.', ' ', '.', ' ', '네모난 고기를 다룰 때 상칼을 다루는 별난 모습. 별종', '', 
+'다를별', '別', '입구', '口', '칼도', '刀', '칼도방', '刂', '.', ' ', '.', ' ', '네모난 고기를 다룰 때 쌍칼을 다루는 별난 모습. 별종', '', 
 '다를이', '異', '밭전', '田', '함께공', '共', '.', ' ', '.', ' ', '.', ' ', '귀신탈을 손에 받쳐서 쓴 무당이 특이한 모습. 이종', '', 
 '다를타', '他', '사람인변', '亻', '어조사야', '也', '.', ' ', '.', ' ', '.', ' ', '사람이 주전자를 들고 다른 사람들에게 물을 나눠주는 모양', '', 
 '초하루삭', '朔', '거스를역', '屰', '달월', '月', '.', ' ', '.', ' ', '.', ' ', '보름을 거스른 달이 다시 초하루에 초생달이 된다. 초하루를 삭이라한다', '', 
@@ -972,7 +972,7 @@ var arr = [
 '윤달윤', '閏', '문문', '門', '임금왕', '王', '.', ' ', '.', ' ', '.', ' ', '윤달에 임금이 문 안에만 있는 풍습. 윤달, 윤년, 윤초', '', 
 '새벽효', '曉', '날일', '日', '흙토', '土', '흙토', '土', '흙토', '土', '우뚝할올', '兀', '새벽에 해가 돋는데 흙더미 사이로 사람이 걸어가는 모습', '', 
 '겨를가', '暇', '날일', '日', '층계단', '段', '.', ' ', '.', ' ', '.', ' ', '해가 떠있을 때 창으로 쳐내서 계단을 만드는 것처럼 시간의 일부를 쳐내서 휴가를 낸다는 뜻', '', 
-'열흘순', '旬', '쌀포', '勹', '날일', '日', '.', ' ', '.', ' ', '.', ' ', '10개씩 산 날을 순이라고 함', '', 
+'열흘순', '旬', '쌀포', '勹', '날일', '日', '.', ' ', '.', ' ', '.', ' ', '10개씩 싼 날을 순이라고 함', '', 
 '눈깜작일순', '瞬', '눈목', '目', '손톱조두', '爫', '덮을멱', '冖', '어그러질천', '舛', '.', ' ', '눈위에 덮여 있는 눈썹과 눈꺼풀이 이그러졌다 펴지는 눈깜작임. 순간', '', 
 '잠깐잠', '暫', '수레차', '車', '도끼근', '斤', '날일', '日', '.', ' ', '.', ' ', '수레를 타고 도끼로 목을 베는 시간은 잠깐이다', '', 
 '초초', '秒', '벼화', '禾', '적을소', '少', '.', ' ', '.', ' ', '.', ' ', '벼에서 나온 적은 까끄라기, 까끄라기가 초를 나타냄', '', 
@@ -985,16 +985,16 @@ var arr = [
 '쌍쌍', '雙', '새추', '隹', '새추', '隹', '또우', '又', '.', ' ', '.', ' ', '새 두 마리 한 쌍을 한 손에 붙잡고 있는 모양', '', 
 '그루주', '株', '나무목', '木', '붉을주', '朱', '.', ' ', '.', ' ', '.', ' ', '나무에 붉은 색칠을 해서 나무 그루 수를 세는 모양', '', 
 '적을과', '寡', '집면', '宀', '머리혈', '頁', '나눌분', '分', '.', ' ', '.', ' ', '집안 머리들이 칼에 맞아 죽어서 살아 남은 사람이 적다. 과부', '', 
-'비율률', '率', '돼지머리두', '亠', '작을요', '幺', '구할구', '求', '열십', '十', '.', ' ', '밧줄을 만들 때 밧줄 재료의 비율을 정하는 모습. 비율', '', 
-'나눌반', '班', '구슬옥', '玉', '칼도', '刀', '구슬옥', '玉', '.', ' ', '.', ' ', '옥을 칼로 둘로 잘라 나누는 모양. ', '', 
+'비율률', '率', '검을현', '玄', '구할구', '求', '열십', '十', '.', '.', '.', ' ', '밧줄을 만들 때 밧줄 재료의 비율을 정하는 모습. 비율', '', 
+'나눌반', '班', '구슬옥', '玉', '칼도방', '刂', '구슬옥', '玉', '.', ' ', '.', ' ', '옥을 칼로 둘로 잘라 나누는 모양. ', '', 
 '갑절배', '倍', '사람인변', '亻', '침부', '咅', '.', ' ', '.', ' ', '.', ' ', '사람에게 침을 뱉으면 곱절로 되돌려 받는다. 배가', '', 
 '북돋울배', '培', '흙토', '土', '갑절배', '倍', '.', ' ', '.', ' ', '.', ' ', '흙을 갑절로 북돋운다. 재배, 배양', '', 
 '어긋날차', '差', '양양', '羊', '왼좌', '左', '.', ' ', '.', ' ', '.', ' ', '양 중에서 약간 질이 떨어지는 양을 왼쪽손에 잡은 모습. 차이가 나는 양', '', 
 '버금부', '副', '불룩할복', '畐', '칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '가장 불룩한 것에 칼을 대어 나누어졌다. 버금이 되었다. 부총리, 부회장', '', 
-'차례서2', '叙', '삼합집', '亼', '나무목', '木', '또우', '又', '.', ' ', '.', ' ', '삼합집을 나무위 짓는데 손대는 순서가 있다', '', 
+'차례서2', '叙', '삼합집', '亼', '나무목', '木', '또우', '又', '.', ' ', '.', ' ', '삼합집을 나무위에 짓는데 손대는 순서가 있다', '', 
 '버금아', '亞', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '집안에 사거리가 있는 집. 궁궐의 버금. 아류', '', 
 '버금중', '仲', '사람인변', '亻', '가운데중', '中', '.', ' ', '.', ' ', '.', ' ', '사람인데 중간에 있는 사람. 중부', '', 
-'차례질', '秩', '벼화', '禾', '잃을실', '失', '.', ' ', '.', ' ', '.', ' ', '벼와 잘라내서 볏단을 세운 것이 질서가 있어 보인다', '', 
+'차례질', '秩', '벼화', '禾', '잃을실', '失', '.', ' ', '.', ' ', '.', ' ', '서 있는 벼와 잘라내서 벼로 볏단을 만들어 세운 것이 질서가 있어 보인다', '', 
 '층층', '層', '주검시', '尸', '거듭증', '曾', '.', ' ', '.', ' ', '.', ' ', '집지붕이 한 층 위에 거듭 거듭 또 있는 모양. 층을 이룬 모양', '', 
 '속리', '裏', '옷의', '衣', '마을리', '里', '.', ' ', '.', ' ', '.', ' ', '옷안에 갈비뼈와 복근이 있는 모양', '', 
 '곁방', '傍', '사람인변', '亻', '설립', '立', '덮을멱', '冖', '모방', '方', '.', ' ', '사람이 서서 쟁기를 잡고 있는 사람 옆에 서 있는 모습. 방관', '', 
@@ -1076,7 +1076,7 @@ var arr = [
 '궁할궁', '窮', '구멍혈', '穴', '몸신', '身', '활궁', '弓', '.', ' ', '.', ' ', '구멍 같은 동굴을 발견하고 사냥갔다 날이 저물어 동굴에 들어가 몸을 누이고 활을 껴안고 자는 궁한 모습. 궁극', '', 
 '천할천', '賤', '조개패', '貝', '창과', '戈', '창과', '戈', '.', ' ', '.', ' ', '누군가의 돈을 차으로 치고 치면 그 사람은 가난해진다. 천해진다', '', 
 '드릴납', '納', '실멱', '糸', '안내', '內', '.', ' ', '.', ' ', '.', ' ', '실타래 중 좋은 것을 관청에 들인다. 납부한다', '', 
-'부세부', '賦', '조개패', '貝', '굳셀무', '武', '.', ' ', '.', ' ', '.', ' ', '돈을 창을 든 사람들이 가서 돈을 걷어가는 모습. 세금부과', '', 
+'부세부', '賦', '조개패', '貝', '굳셀무', '武', '.', ' ', '.', ' ', '.', ' ', '돈을 창을 든 사람들이 가서 강제로 걷어가는 것이 세금이다. 세금부과', '', 
 '굳셀무', '武', '한일', '一', '창과', '戈', '그칠지', '止', '.', ' ', '.', ' ', '창을 들고 다리로 굳세게 선 무사의 모습', '', 
 '조세조', '租', '벼화', '禾', '또차', '且', '.', ' ', '.', ' ', '.', ' ', '벼에서 조세 분량을 나누어서 찬합에 넣고 또 넣어서 여러 항목의 조세를 바치는 모양', '', 
 '청렴할렴', '廉', '집엄', '广', '겸할겸', '兼', '.', ' ', '.', ' ', '.', ' ', '집인 관청에서 한 사람이 두 업무를 겸하여 수행하면서 월급은 1명분 받는 청렴한 관리 모습', '', 
@@ -1092,13 +1092,13 @@ var arr = [
 '여자낭', '娘', '여자여', '女', '좋을양', '良', '.', ' ', '.', ' ', '.', ' ', '여자인데 석발기로 고르듯 고르고 고른 좋은 여자 낭자', '', 
 '중매매', '媒', '여자여', '女', '아무모', '某', '.', ' ', '.', ' ', '.', ' ', '여자에게 잘 모르는 아무개를 붙여주는 중매', '', 
 '아무모', '某', '달감', '甘', '나무목', '木', '.', ' ', '.', ' ', '.', ' ', '나무에 달린 달달한 열매는 모두 같아서 아무거나 따도 똑같다. 김모씨', '', 
-'짝반', '伴', '사람인변', '亻', '반반', '半', '.', ' ', '.', ' ', '.', ' ', '사람의 반쪽도 반이다. 반려자', '', 
+'짝반', '伴', '사람인변', '亻', '반반', '半', '.', ' ', '.', ' ', '.', ' ', '사람의 반쪽은 짝이다. 반려자', '', 
 '짝배', '配', '닭유', '酉', '몸기', '己', '.', ' ', '.', ' ', '.', ' ', '술병을 들고 몸을 기울여 술을 따라주는 배우자', '', 
 '짝우', '偶', '사람인변', '亻', '원숭이우', '禺', '.', ' ', '.', ' ', '.', ' ', '사람이 자기 배우자 옆에 가면 원숭이 처럼 웃기게 군다', '', 
 '혼인인', '姻', '여자여', '女', '인할인', '因', '.', ' ', '.', ' ', '.', ' ', '여자는 여자인데 침대에 대자로 누운 남자 옆에 누운 여자는 그 남자와 혼인한 여자다', '', 
-'첩첩', '妾', '매울신', '辛', '여자여', '女', '.', ' ', '.', ' ', '.', ' ', '죄인으로 잡혀온 얼굴 문신을 한 여자를 데려다 첩을 삼는 고대 풍습', '', 
+'첩첩', '妾', '매울신', '辛', '여자여', '女', '.', ' ', '.', ' ', '.', ' ', '포로로 잡혀온 얼굴 문신을 한 여자를 데려다 첩을 삼는 고대 풍습', '', 
 '맏맹', '孟', '아들자', '子', '그릇명', '皿', '.', ' ', '.', ' ', '.', ' ', '맏아들을 삶아 그릇에 바치는 고대 샤마니즘 풍습', '', 
-'조카질', '姪', '여자여', '女', '이를지', '至', '.', ' ', '.', ' ', '.', ' ', '여자 옆에 꽂힌 화살. 먼데 있는 여자 형제의 여자가 낳은 놓은 아이 조카', '', 
+'조카질', '姪', '여자여', '女', '이를지', '至', '.', ' ', '.', ' ', '.', ' ', '여자 옆에 꽂힌 화살. 먼데 있는 여자 형제 혹은 형제의 여자가 낳은 아이 조카', '', 
 '맏백', '伯', '사람인변', '亻', '흰백', '白', '.', ' ', '.', ' ', '.', ' ', '사람이 서서 흰 촛불을 켜고 제사를 주관하는 맏아들. 백부', '', 
 '손빈', '賓', '집면', '宀', '걸음보', '步', '조개패', '貝', '.', ' ', '.', ' ', '집에 걸어와서 돈을 주는 손님. 귀빈', '', 
 '몰구', '驅', '말마', '馬', '구역구', '區', '.', ' ', '.', ' ', '.', ' ', '말이 물건을 구역을 나누어 실은 수레를 끌고 가도록 모는 모습. ', '', 
@@ -1987,6 +1987,13 @@ var arr = [
 '돼지머리계', '彑', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '돼지머리를 잘라 놓은 모양', '', 
 '수풀림', '林', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '나무와 나무가 빽빽한 숲 모양', '', 
 '공교할교', '丂', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '공교한 기술을 부리는 갈고리 모양', '', 
+'뼈바를과', '冎', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '고기를 발라내어 뼈가 보이는 모습', '', 
+'터놓을쾌', '夬', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '죄인의 목에 씌워진 칼의 한 쪽을 터놓은 모습', '', 
+'솟을용', '甬', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '양쪽에 담이 솟은 길을 지나가는 모습', '', 
+'포석', '腊', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '고기를 말려서 오랫동안 먹을 수 있는 육포', '', 
+'도마뱀수', '虽', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입이 크고 벌레처럼 생긴 도마뱀', '', 
+'침부', '咅', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '서있는 사람이 입으로 침을 뱉는 모습', '', 
+'창창', '囱', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '뚫린 창이 창살로 막힌 모양', '', 
 
 
 
