--- a/index.html
+++ b/index.html
@@ -1154,7 +1154,7 @@ var arr = [
 '꺽을절', '折', '손수변', '扌', '도끼근', '斤', '.', ' ', '.', ' ', '.', ' ', '손에 도끼를 들고 나무를 꺽는 모양. 골절', '', 
 '쇠부어만들주', '鑄', '쇠금', '金', '목숨수', '壽', '.', ' ', '.', ' ', '.', ' ', '쇠를 녹여서 쇠에게 새로운 목숨을 준다. 주물', '', 
 '옻칠', '漆', '물수변', '氵', '나무목', '木', '여덟팔', '八', '물수', '水', '.', ' ', '물을 옻나무에서 옻액을 받은 진액에 타서 옻칠을 하는 모습. 칠기', '', 
-'헐훼', '毁', '절구구', '臼', '장인공', '工', '창수', '殳', '.', ' ', '.', ' ', '돌절구를 장인이 공들여 만들었는 창으로 때려서 훼손 시키는 모양', '', 
+'헐훼', '毁', '절구구', '臼', '장인공', '工', '창수', '殳', '.', ' ', '.', ' ', '돌절구를 장인이 공들여 만들었는데 누군가 창으로 때려서 훼손 시키는 모양', '', 
 '칼검', '劍', '다첨', '僉', '칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '삼합집 사람들이 모여서 밥을 먹는데 칼을 들고온 자객. 검객', '', 
 '다첨', '僉', '삼합집', '亼', '입구', '口', '입구', '口', '사람인', '人', '사람인', '人', '삼합집 사람들이 옹기종기 모여서 다같이 밥을 먹는 모양', '', 
 '기계계', '械', '나무목', '木', '경계할계', '戒', '.', ' ', '.', ' ', '.', ' ', '나무로 만들어 창자루 같은 부분이 있고 손으로 작동시키는 베틀. 베틀은 기계이다', '', 
@@ -1172,7 +1172,7 @@ var arr = [
 '공교로울교2', '巧', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '장인의 흙손과 짐을 쌓는 사람의 갈고리는 공교롭다', '', 
 '바로잡을교', '矯', '화살시', '矢', '다리교', '橋', '.', ' ', '.', ' ', '.', ' ', '화살을 다리 같은 교정기에 올리고 바로 잡는 모습. 교정', '', 
 '비교할교', '較', '수레차', '車', '사귈교', '交', '.', ' ', '.', ' ', '.', ' ', '수레 두 대를 사귀듯 옆에 붙여놓고 비교하는 모습', '', 
-'등급급', '級', '실멱', '糸', '미칠급', '及', '.', ' ', '.', ' ', '.', ' ', '실타래 하나가 끝나면 다음 실타래가 미쳐서 차례로 공급된다. 차례, 등급', '', 
+'등급급', '級', '실멱', '糸', '미칠급', '及', '.', ' ', '.', ' ', '.', ' ', '실타래 하나 다음에 또 실타래가  있는 모습. 여러 등급의 실타래. 등급', '', 
 '헤아릴량2', '諒', '말씀언', '言', '서울경', '京', '.', ' ', '.', ' ', '.', ' ', '말로 서울의 높은 집이 얼마나 큰지 말하며 헤아리는 모습. 양해', '', 
 '샐루', '漏', '물수변', '氵', '주검시', '尸', '비우', '雨', '.', ' ', '.', ' ', '물이 지붕에서 부터 새서 방안에 비가 내리는 모양. 누수', '', 
 '줄일축', '縮', '실멱', '糸', '잘숙', '宿', '.', ' ', '.', ' ', '.', ' ', '실을 잠재우면 실의 부피가 줄어든다. 수축', '', 
@@ -1994,6 +1994,11 @@ var arr = [
 '도마뱀수', '虽', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입이 크고 벌레처럼 생긴 도마뱀', '', 
 '침부', '咅', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '서있는 사람이 입으로 침을 뱉는 모습', '', 
 '창창', '囱', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '뚫린 창이 창살로 막힌 모양', '', 
+'아닐불2', '弗', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '활을 가지고 사람을 죽이면 안된다고 하는 부처', '', 
+'목항', '亢', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '죄인의 발목을 묶은 모양', '', 
+'차조출', '朮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '자조의 이삭이 늘어진 모습', '', 
+'장군부', '缶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '한쪽은 막히고 한쪽은 트인 장군', '', 
+'벌레치', '豸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '벌레 모양', '', 
 
 
 
