--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@ var arr = [
 '벼슬직', '職', '귀이', '耳', '소리음', '音', '창과', '戈', '.', ' ', '.', ' ', '귀로 소리를 듣기 위해 창으로 무언가 때리며 조율하는 악공은 벼슬이다. 직책이다', '', 
 '호걸호', '豪', '높을고', '高', '돼지시', '豕', '.', ' ', '.', ' ', '.', ' ', '높은 집에 살고 아래 돼지가 사는 집에 사는 호걸', '', 
 '제후후', '侯', '사람인변', '亻', '기슭엄', '厂', '화살시', '矢', '.', ' ', '.', ' ', '사람인데 기슭 골짜기에 화살을 들고 다니며 다스리는 사람 제후', '', 
-'맬계2', '係', '사람인변', '亻', '이을계', '系', '.', ' ', '.', ' ', '.', ' ', '사람이 다른 사람과 계약을 맺어 약속을 이어간다', '', 
+'맬계2', '係', '사람인변', '亻', '이을계', '系', '.', ' ', '.', ' ', '.', ' ', '사람이 다른 사람과 관계를 이어가기 위해 계약을 맺는다. ', '', 
 '계약계', '契', '예쁠봉', '丰', '칼도', '刀', '큰대', '大', '.', ' ', '.', ' ', '예쁘게 칼로 계약서를 새기는 큰 사람 모습. 계약', '', 
 '관청부', '府', '집엄', '广', '사람인변', '亻', '마디촌', '寸', '.', ' ', '.', ' ', '큰 집 관청에는 사람마다 자기 손에 업무를 맡은 부서가 있다', '', 
 '관청서', '署', '그물망', '罒', '사람자', '者', '.', ' ', '.', ' ', '.', ' ', '그물로 사람을 잡는 관청. 경찰서', '', 
@@ -1329,7 +1329,7 @@ var arr = [
 '바칠공', '貢', '장인공', '工', '조개패', '貝', '.', ' ', '.', ' ', '.', ' ', '토목공사에 몸으로 떼우는 대신 돈을 바친다. ', '', 
 '격식격', '格', '나무목', '木', '각각각', '各', '.', ' ', '.', ' ', '.', ' ', '나무에 올라간 사람 다리를 보고 어떤 가지를 자르라고 말하는 모습. 나무가 격식을 갖춘다', '', 
 '보낼견', '遣', '갈착', '辶', '귀할귀', '貴', '언덕부', '阜', '.', ' ', '.', ' ', '걸어가서 귀한 것을 언덕마을에 주라고 보냄을 받는다. 파견', '', 
-'멜담', '擔', '손수변', '扌', '위태로울위', '危', '어진사람인', '儿', '말씀언', '言', '.', ' ', '손에 무언가 들고 절벽처럼 위태로운 길을 걷는 사람에게 메게하는 모습. 담당', '', 
+'멜담', '擔', '손수변', '扌', '위태로울위', '危', '어진사람인', '儿', '말씀언', '言', '.', ' ', '손에 무언가 들고 절벽처럼 위태로운 길을 걷는 사람에게 메개하는 모습. 담당', '', 
 '동료료', '僚', '사람인변', '亻', '횟불료', '燎', '.', ' ', '.', ' ', '.', ' ', '사람인데 횟불을 켜고 나의 길을 밝혀주는 동료', '', 
 '횟불료', '燎', '불화', '火', '한일', '一', '불화', '火', '날일', '日', '작을소', '小', '불을 켜고 대낯같이 밝히고 작은 것을 찾는 횟불', '', 
 '모을모', '募', '없을막', '莫', '힘력', '力', '.', ' ', '.', ' ', '.', ' ', '없는 힘을 보충하기 위해 사람을 더 모은다. 모집한다', '', 
@@ -1999,6 +1999,13 @@ var arr = [
 '차조출', '朮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '자조의 이삭이 늘어진 모습', '', 
 '장군부', '缶', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '한쪽은 막히고 한쪽은 트인 장군', '', 
 '벌레치', '豸', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '벌레 모양', '', 
+'단단', '壇', '흙토', '土', '돼지머리두', '亠', '돌회', '回', '가로왈', '曰', '한일', '一', '흙으로 만든 단 주위를 돌고 축문을 외우는 모습', '', 
+'구결자야', '乛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '한일에 끝이 꺽인 글자 모양', '', 
+'가시자', '朿', '나무목', '木', '덮을멱', '冖', '.', ' ', '.', ' ', '.', ' ', '나무에 가시가 덮힌 모양', '', 
+'채마밭포', '甫', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '채마밭에 허수아비를 새워 놓은 모양', '', 
+'어그러질천', '舛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '춤출 때 다리가 어그러지는 모양', '', 
+'위태로울위', '危', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '칼날 같이 절벽위에 서있던 사람이 떨어져 구부러져 있는 위태로운 모습', '', 
+'달릴발', '犮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 해처럼 혀를 내밀고 달리눈 모습니다. ', '', 
 
 
 
