--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@ var arr = [
 '장막장', '帳', '수건건', '巾', '긴장', '長', '.', ' ', '.', ' ', '.', ' ', '수건을 길게 해서 장막을 만든 모양. 휘장', '', 
 '집전', '殿', '펼전', '展', '창수', '殳', '.', ' ', '.', ' ', '.', ' ', '임금에게 옷을 입혀주고 주위에 창든 병사들이 지키는 임금의 집. 궁전', '', 
 '창고창', '倉', '삼합집', '亼', '지게문호', '戶', '입구', '口', '.', ' ', '.', ' ', '삼합집을 만들고 출입구를 뚫어서 지게문을 설치한 창고', '', 
-'주춧돌초', '礎', '돌석', '石', '나무목', '木', '나무목', '木', '바를정', '正', '.', ' ', '돌로 만들어 나무 기둥드링 바로 설수 있게 해주는 주춧돌. 초석, 기초', '', 
+'주춧돌초', '礎', '돌석', '石', '나무목', '木', '나무목', '木', '바를정', '正', '.', ' ', '돌로 만들어 나무 기둥들을 바로 설수 있게 해주는 주춧돌. 초석, 기초', '', 
 '베개침', '枕', '나무목', '木', '덮을멱', '冖', '사람인', '人', '.', ' ', '.', ' ', '나무로 만들어 사람이 머리에 베고 자는 목침', '', 
 '간간', '肝', '달월', '月', '방패간', '干', '.', ' ', '.', ' ', '.', ' ', '인체의 장기 중 방패처럼 생긴 간', '', 
 '어깨견', '肩', '지게문호', '戶', '달월', '月', '.', ' ', '.', ' ', '.', ' ', '인체의 부위 중 지게문을 닮은 어깨. 견장', '', 
@@ -2006,6 +2006,8 @@ var arr = [
 '어그러질천', '舛', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '춤출 때 다리가 어그러지는 모양', '', 
 '위태로울위', '危', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '칼날 같이 절벽위에 서있던 사람이 떨어져 구부러져 있는 위태로운 모습', '', 
 '달릴발', '犮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 해처럼 혀를 내밀고 달리눈 모습니다. ', '', 
+'덮을모', '冃', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '모자를 써서 머리가 모자에 덮힌 모양', '', 
+'문서권', '卷', '사내부', '夫', '여덟팔', '八', '병부절2', '㔾', '.', ' ', '.', ' ', '사내가 팔로 대나무 죽간 문서를 말아 놓은 모습', '', 
 
 
 
