--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,7 @@ var arr = [
 '부르짖을규', '叫', '입구', '口', '얽힐구', '丩', '.', ' ', '.', ' ', '.', ' ', '입으로 부르짖으면 실이 엉키듯 목소리가 갈라지고 엉키는 모습. 절규', '', 
 '모일규', '糾', '실멱', '糸', '얽힐구', '丩', '.', ' ', '.', ' ', '.', ' ', '실이 얽히듯 모이는 모양. 분규', '', 
 '꾀할기', '企', '사람인', '人', '그칠지', '止', '.', ' ', '.', ' ', '.', ' ', '사람이 걸음을 멈추고 무언가 더 잘할려고 기획하는 모습', '', 
-'허락락', '諾', '말씀언', '言', '같을약', '若', '.', ' ', '.', ' ', '.', ' ', '말로 상대방의 의사와 같다고 말하면서 허락하는 모습', '', 
+'허락락', '諾', '말씀언', '言', '같을약', '若', '.', ' ', '.', ' ', '.', ' ', '말로 본인의 생각도 상대방의 하고자 하는 의사와 같다고 말하면서 허락하는 모습', '', 
 '기록할록', '錄', '쇠금', '金', '푸를록', '綠', '.', ' ', '.', ' ', '.', ' ', '쇠로 원판을 만들고 푸른 염료를 칠해서 기록한 것을 인쇄하는 모양', '', 
 '새길명', '銘', '쇠금', '金', '이름명', '名', '.', ' ', '.', ' ', '.', ' ', '쇠로된 금속판에 이름을 새기는 모습. 명심, 명기', '', 
 '비평할비', '批', '손수변', '扌', '비수비', '匕', '비수비', '匕', '.', ' ', '.', ' ', '손에 숟가락과 숟가락을 들고 어디가 문제 있는지 비평하는 모습', '', 
@@ -1543,23 +1543,23 @@ var arr = [
 '베풀술', '述', '갈착', '辶', '재주술', '術', '.', ' ', '.', ' ', '.', ' ', '여기저기 다니며 차조를 재배하는 기술을 베푸는 모양', '', 
 '어조사야2', '耶', '귀이', '耳', '언덕부방', '阝', '.', ' ', '.', ' ', '.', ' ', '언덕마을 사람들의 말을 귀로 듣는 사람 예수, 그런가? 하는 어조사', '', 
 '어찌언', '焉', '바를정', '正', '새조', '鳥', '.', ' ', '.', ' ', '.', ' ', '긴 벼슬과 긴 꼬리를 가진 새, 어찌 이렇게 이쁜가? 하는 어조사', '', 
-'번역역', '譯', '말씀언', '言', '눈목', '目', '다행행', '幸', '.', ' ', '.', ' ', '수갑을 채운 죄인을 눈으로 살피면서 말하는 통역', '', 
+'번역역', '譯', '말씀언', '言', '눈목', '目', '다행행', '幸', '.', ' ', '.', ' ', '수갑을 채운 죄인을 눈으로 살피듯 상대방을 살피면서 말하는 통역', '', 
 '읊을영', '詠', '말씀언', '言', '길영', '永', '.', ' ', '.', ' ', '.', ' ', '말을 길게하여 읊는 모양. 영가', '', 
 '운운', '韻', '소리음', '音', '인원원', '員', '.', ' ', '.', ' ', '.', ' ', '소리가 돈으로 동원된 인원처럼 둥글게 모아진 운', '', 
 '이를위', '謂', '말씀언', '言', '밥통위', '胃', '.', ' ', '.', ' ', '.', ' ', '배속에서 나온 말로 무언가 말하는 모습. 소위', '', 
 '문서적', '籍', '대죽', '竹', '쟁기뢰', '耒', '옛석', '昔', '.', ' ', '.', ' ', '대나무에 쟁기로 옛날 밭갈았던 날짜를 적어 문서 서적을 만든 모습', '', 
 '점점', '點', '검을흑', '黑', '차지할점', '占', '.', ' ', '.', ' ', '.', ' ', '검은 색 먹물로 차지할 곳에 점을 찍는 모습', '', 
-'고칠정', '訂', '말씀언', '言', '고무래정', '丁', '.', ' ', '.', ' ', '.', ' ', '말을 고무래로 펴서 말을 수정하는 모습', '', 
+'고칠정', '訂', '말씀언', '言', '고무래정', '丁', '.', ' ', '.', ' ', '.', ' ', '말을 고무래로 펴듯 말이 모난 부분을 수정하는 모습', '', 
 '기록할지', '誌', '말씀언', '言', '선비사', '士', '마음심', '心', '.', ' ', '.', ' ', '선비가 마음에 품은 뜻을 입으로 말하고 글로 기록한 것이 지이다. 잡지', '', 
 '뽑을초', '抄', '손수변', '扌', '적을소', '少', '.', ' ', '.', ' ', '.', ' ', '손으로 본문에서 작은 것들을 뽑아 초록을 만든다는 뜻', '', 
 '탄식할탄', '歎', '진흙근', '菫', '하품흠', '欠', '.', ' ', '.', ' ', '.', ' ', '진흙에 빠져서 하품하듯 입을 크게 벌리고 탄식하는 모습', '', 
 '평론할평', '評', '말씀언', '言', '평평할평', '平', '.', ' ', '.', ' ', '.', ' ', '말을 평이하게 하며 사실을 적은 평론', '', 
-'어찌해', '奚', '손톱조두', '爫', '작을요', '幺', '큰대', '大', '.', ' ', '.', ' ', '사람이 실타래 같은 머리채를 잡히고 어찌 내 머리를 잡느냐고 말함', '', 
+'어찌해', '奚', '손톱조두', '爫', '작을요', '幺', '큰대', '大', '.', ' ', '.', ' ', '사람이 실타래 같은 머리채를 다른 사람 손에 잡히고 어찌 내 머리를 잡느냐고 말함', '', 
 '어조사혜', '兮', '여덟팔', '八', '공교할교', '丂', '.', ' ', '.', ' ', '.', ' ', '공교한 솜씨에 감탄하는 모양. 감탄사', '', 
 '그을획', '劃', '그림화', '畵', '칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '그림을 그리듯 칼날같은 획을 긋는 모양. 한획 두획', '', 
 '깨달을각', '覺', '배울학', '學', '볼견', '見', '.', ' ', '.', ' ', '.', ' ', '아들에게 산가지로 수를 가르치고 아들이 수를 셈하는 모습을 보고 깨듣는다는 뜻. 각성', '', 
 '간행할간', '刊', '방패간', '干', '칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '방패같은 목판에 칼로 새겨서 책을 간행하는 모습', '', 
-'책권2', '券', '여덟팔', '八', '사내부', '夫', '칼도', '刀', '.', ' ', '.', ' ', '사내가 팔에 칼을 잡고 적당하게 잘라서 책을 만드는 모습', '', 
+'책권2', '券', '여덟팔', '八', '사내부', '夫', '칼도', '刀', '.', ' ', '.', ' ', '사내가 팔에 칼을 잡고 적당하게 잘라서 책을 권으로 만드는 모습', '', 
 '문서부', '簿', '대죽', '竹', '얇을박', '薄', '.', ' ', '.', ' ', '.', ' ', '대나무로 만들어 얇은 문서들. 장부, 가계부', '', 
 '얇을박', '薄', '풀초두', '艹', '물수변', '氵', '채마밭포', '甫', '마디촌', '寸', '.', ' ', '손에 물을 들고 채마밭이 물을 주면 물이 작물위로 얇게 퍼진다. ', '', 
 '지혜지', '智', '알지', '知', '가로왈', '曰', '.', ' ', '.', ' ', '.', ' ', '알고 있는 바를 말로 하는 것이 지혜이다', '', 
@@ -1580,7 +1580,7 @@ var arr = [
 '재앙재', '災', '내천2', '巛', '불화', '火', '.', ' ', '.', ' ', '.', ' ', '물과 불이 가장 큰 재앙이다.', '', 
 '위태할태', '殆', '죽은뼈알', '歹', '사사로울사', '厶', '입구', '口', '.', ' ', '.', ' ', '팔로 지휘하고 입으로 말하는 사람이 대에서 떨어져서 죽은뼈가 드러나는 위태한 모습', '', 
 '험할험', '險', '언덕부방', '阝', '다첨', '僉', '.', ' ', '.', ' ', '.', ' ', '삼합집 사람들이 모두 언덕이 험하다고 말하는 모습. 위험', '', 
-'재앙화', '禍', '보일시', '示', '입비뚤어질과', '冎', '.', ' ', '.', ' ', '.', ' ', '입비뚤어 지는 재앙을 겪어 제삿상을 차리고 쾌유를 비는 모습. 참화', '', 
+'재앙화', '禍', '보일시', '示', '입비뚤어질과', '冎', '입구', '口', '.', ' ', '.', ' ', '입비뚤어 지는 재앙을 겪어 제삿상을 차리고 쾌유를 비는 모습. 참화', '', 
 '그림자영', '影', '날일', '日', '서울경', '京', '터럭삼', '彡', '.', ' ', '.', ' ', '해가 나서 서울의 높은 집위에 해가 비치는 모양. 해가 비치면 그림자가 나타난다. 음영', '', 
 '비칠영', '映', '날일', '日', '가운데앙', '央', '.', ' ', '.', ' ', '.', ' ', '해가 나서 칼을 찬 죄인에게 비치는 모양. 영화', '', 
 '비출조', '照', '날일', '日', '부를소', '召', '불화발', '灬', '.', ' ', '.', ' ', '해와 불을 부르면 해와 불에서 빛이 나와서 비친다', '', 
@@ -1676,7 +1676,7 @@ var arr = [
 '말탈기', '騎', '말마', '馬', '기이할기', '奇', '.', ' ', '.', ' ', '.', ' ', '말에 안장을 얹은 다음 사람이 앉은 모양. 기수', '', 
 '밟을답', '踏', '입구', '口', '그칠지', '止', '물수', '水', '가로왈', '曰', '.', ' ', '발로 걸으며 물흐르는 곳곳 들러서 물어 보며 답사하는 모양', '', 
 '인도할도', '導', '길도', '道', '마디촌', '寸', '.', ' ', '.', ' ', '.', ' ', '길을 걸어갈때 길눈이 밝은 사람이 길눈 어두운 누군가의 손을 잡고 인도하는 모습', '', 
-'건널도', '渡', '물수변', '氵', '집면', '宀', '스물입', '廿', '또우', '又', '.', ' ', '물건너 집까지 가기전 돌을 손에 들고 던져서 물이 얼마나 깊은지 보고 건너는 모습. 도하', '', 
+'건널도', '渡', '물수변', '氵', '집엄', '广', '스물입', '廿', '또우', '又', '.', ' ', '물건너 집까지 가기전 돌을 손에 들고 던져서 물이 얼마나 깊은지 보고 건너는 모습. 도하', '', 
 '뛸도', '跳', '입구', '口', '그칠지', '止', '복숭아도', '桃', '.', ' ', '.', ' ', '복숭아 나무를 보고 좋은 조짐이어서 열매를 따려고 뛰는 모습 도약', '', 
 '살필독', '督', '콩숙', '尗', '또우', '又', '눈목', '目', '.', ' ', '.', ' ', '콩을 손에 잡고 눈으로 살피는 모습. 감독', '', 
 '오를등2', '騰', '달월', '月', '여덟팔', '八', '한일', '一', '큰대', '大', '말마', '馬', '배에 큰 사람이 팔에 삿대를 들고 올라가듯 말등에 올라 가는 모습', '', 
@@ -1708,7 +1708,7 @@ var arr = [
 '다다를부', '赴', '달릴주', '走', '점복', '卜', '.', ' ', '.', ' ', '.', ' ', '점을 보고 누군가를 정해서 달려서 부임하게 한다. 전한다', '', 
 '붙일부', '附', '언덕부방', '阝', '줄부', '付', '.', ' ', '.', ' ', '.', ' ', '관청의 사람이 손에 토지 경작권을 언덕마을 사람에게 준다. 붙인다. 첨부', '', 
 '달아날분', '奔', '큰대', '大', '풀훼', '卉', '.', ' ', '.', ' ', '.', ' ', '큰 사람이 풀더미 위로 달린다. 분발', '', 
-'떨칠분', '奮', '큰대', '大', '새추', '隹', '밭전', '田', '.', ' ', '.', ' ', '큰 사람이 새가 밭이 들어와서 잡느라 이리 뛰고 저리 뛰며 분투하는 모습', '', 
+'떨칠분', '奮', '큰대', '大', '새추', '隹', '밭전', '田', '.', ' ', '.', ' ', '큰 사람이 새가 밭에 들어와서 잡느라 이리 뛰고 저리 뛰며 분투하는 모습', '', 
 '숨길비', '秘', '벼화', '禾', '반드시필', '必', '.', ' ', '.', ' ', '.', ' ', '전쟁이 나면 벼는 반드시 숨겨야 하는 항목이다. 비밀', '', 
 '버릴사', '捨', '손수변', '扌', '집사', '舍', '.', ' ', '.', ' ', '.', ' ', '손으로 집에 있는 것들을 갖다 버린다. 취사선택', '', 
 '줄사', '賜', '조개패', '貝', '쉬울이', '易', '.', ' ', '.', ' ', '.', ' ', '돈을 햇빛처럼 준다. 선사한다', '', 
@@ -1719,15 +1719,15 @@ var arr = [
 '베풀선', '宣', '집면', '宀', '한일', '一', '날일', '日', '한일', '一', '.', ' ', '아침에 집에 햇빛이 비친다. 햇빛이 베풀어진다. 선고, 선포', '', 
 '돌선', '旋', '모방', '方', '사람인', '人', '발족', '足', '.', ' ', '.', ' ', '사람이 네모난 지역을 발로 도는 모습. 선회', '', 
 '건널섭', '涉', '물수변', '氵', '걸음보', '步', '.', ' ', '.', ' ', '.', ' ', '물을 걸음으로 걷는다. 모든 것을 격는다. 섭렵', '', 
-'깨어날소', '蘇', '풀초두', '艹', '물고기어', '魚', '벼화', '禾', '.', ' ', '.', ' ', '사람ㅇ 몸이 좋지 않을 때 풀인데 물고기 비린내 나는 어성초와 벼를 먹고 깨어난다. 소생', '', 
+'깨어날소', '蘇', '풀초두', '艹', '물고기어', '魚', '벼화', '禾', '.', ' ', '.', ' ', '사람이 몸이 좋지 않을 때 풀인데 물고기 비린내 나는 어성초와 벼를 먹고 깨어난다. 소생', '', 
 '쇠할쇠', '衰', '옷의', '衣', '추할추', '吜', '.', ' ', '.', ' ', '.', ' ', '옷이 추하여 지면 옷이 쇠한 것이다. 쇠퇴', '', 
-'찾을수', '搜', '손수변', '扌', '절구구', '臼', '뚫을곤', '丨', '또우', '又', '.', ' ', '사람이 손과 손에 막대기를 들고 철구  안쪽에 무언가 찾는 모습. 수색', '', 
+'찾을수', '搜', '손수변', '扌', '절구구', '臼', '뚫을곤', '丨', '또우', '又', '.', ' ', '사람이 손과 손에 막대기를 들고 절구 안쪽에 무언가 찾는 모습. 수색', '', 
 '잠잘수', '睡', '눈목', '目', '드리울수', '垂', '.', ' ', '.', ' ', '.', ' ', '눈에 발처럼 눈꺼풀이 드리워지면 잠이 온다. 수면', '', 
 '보낼수', '輸', '수레차', '車', '삼합집', '亼', '달월', '月', '도랑괴', '巜', '.', ' ', '수레나 배위에 삼합집을 짓고 물결이나 길을 따라 무언가 수송하는 모습. ', '', 
 '따라갈수', '遂', '갈착', '辶', '여덟팔', '八', '돼지시', '豕', '.', ' ', '.', ' ', '풀숲을 해치며 나가는 돼지를 따라 걸어가는 모습. 수행, 완수', '', 
 '따를수', '隨', '언덕부방', '阝', '왼좌', '左', '달월', '月', '갈착', '辶', '.', ' ', '언덕마을에서 왼손에 고기를 들고 제주를 따라 걸어가는 모습. 수반', '', 
 '구할수', '需', '비우', '雨', '말이을이', '而', '.', ' ', '.', ' ', '.', ' ', '기우제를 지내는 무당이 치렁치렁한 옷을 끌며 제물을 구하러 다니는 모습. 수요', '', 
-'익을숙', '熟', '누릴향', '享', '둥글환', '丸', '불화발', '灬', '.', ' ', '.', ' ', '돼지고기를 삶아 아들에게 먹이려고 불을 지피고 구부린 모양. 숙회', '', 
+'익을숙', '熟', '누릴향', '享', '둥글환', '丸', '불화발', '灬', '.', ' ', '.', ' ', '돼지고기를 삶아 아들에게 먹이려고 불을 지피고 구부려 바람불며 돼지고기를 익히는 모슴. 숙회', '', 
 '돌순', '巡', '갈착', '辶', '내천2', '巛', '.', ' ', '.', ' ', '.', ' ', '시냇물이 돌아서 나가는 모양. 순회', '', 
 '좇을순', '循', '걸을척', '彳', '방패순', '盾', '.', ' ', '.', ' ', '.', ' ', '앞에 가는 사람을 방패로 막으며 좇아가는 모습. 순종', '', 
 '방패순', '盾', '기슭엄', '厂', '열십', '十', '눈목', '目', '.', ' ', '.', ' ', '굴바위 같은 큰 판에 손잡이가 있고 눈을 가리는 방패', '', 
@@ -2008,6 +2008,15 @@ var arr = [
 '달릴발', '犮', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '사람이 해처럼 혀를 내밀고 달리눈 모습니다. ', '', 
 '덮을모', '冃', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '모자를 써서 머리가 모자에 덮힌 모양', '', 
 '문서권', '卷', '사내부', '夫', '여덟팔', '八', '병부절2', '㔾', '.', ' ', '.', ' ', '사내가 팔로 대나무 죽간 문서를 말아 놓은 모습', '', 
+'못연', '淵', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '연못에 물이 채워지고 연잎들이 떠 있는 모양', '', 
+'원숭이우', '禺', '밭전', '田', '멀경', '冂', '사사로울사', '厶', '.', ' ', '.', ' ', '원숭이 모양', '', 
+'얽힐구', '丩', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '실이 엃힌 모양', '', 
+'입비뚤어질과', '冎', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '입이 비뚤어진 모양', '', 
+'싸울투', '鬥', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '발톱을 새우고 서로 싸우는 모습', '', 
+'길게걸을인', '廴', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '보폭을 길게해서 걷는 모양', '', 
+'발자국유', '禸', '멀경', '冂', '사사로울사', '厶', '.', ' ', '.', ' ', '.', ' ', '발바닥 모양이 발자국에 새겨진 모양', '', 
+'풀훼', '卉', '열십', '十', '받들공', '廾', '.', ' ', '.', ' ', '.', ' ', '풀이 무성한 모양', '', 
+'추할추', '吜', '입구', '口', '소축', '丑', '.', ' ', '.', ' ', '.', ' ', '입으로 짐승의 발톱같이 험한 말을하니 추하다', '', 
 
 
 
