--- a/index.html
+++ b/index.html
@@ -1755,12 +1755,12 @@ var arr = [
 '넘을월', '越', '달릴주', '走', '도끼월', '鉞', '.', ' ', '.', ' ', '.', ' ', '도끼를 들고 달려서 적의 국경선을 넘는다. 월담, 월경', '', 
 '에워쌀위', '圍', '나라국', '囗', '가죽위', '韋', '.', ' ', '.', ' ', '.', ' ', '가죽으로 에워싸진 군막. 포위', '', 
 '숨을은2', '隱', '언덕부방', '阝', '손톱조두', '爫', '장인공', '工', '왼손좌', '屮', '마음심', '心', '언덕마을에서 손과 손에 장인의 흙손을 든 미장 장인이 공사중 사람을 죽여 두려운 마음에 숨었다 은닉', '', 
-'엉길응', '凝', '이수변', '冫', '비수비', '匕', '화살시', '矢', '창모', '矛', '발족', '足', '얼음이 얼어 비수, 화살, 창을 든 손과 발이 응결되어 서러 얽히는 모습', '', 
+'엉길응', '凝', '이수변', '冫', '비수비', '匕', '화살시', '矢', '창모', '矛', '발족', '足', '얼음이 얼어 비수, 화살, 창을 든 손과 발이 응결되어 서로 얽히는 모습', '', 
 '남을잔', '殘', '죽은뼈알', '歹', '창과', '戈', '창과', '戈', '.', ' ', '.', ' ', '창과 창으로 사람을 쳐서 죽였더니 죽은 뼈만 남았다. 잔액', '', 
 '잠길잠', '潛', '물수변', '氵', '목멜기', '旡', '목멜기', '旡', '가로왈', '曰', '.', ' ', '물속에 들어가 목까지 잠긴 물속에서 두사람이 으 좋다 하고 말하는 모습', '', 
 '장려할장', '奬', '장수장', '將', '큰대', '大', '.', ' ', '.', ' ', '.', ' ', '평상에서 앉은 장수가 손에 고기를 들고 다른 사람에게 먹으라고 권장하는 모습', '', 
 '단장할장', '粧', '쌀미', '米', '집엄', '广', '선비사', '士', '.', ' ', '.', ' ', '쌀을 간 것 같은 분말을 발라 집체같은 몸을 단장하는 상체가 큰 무사 같은 여자. 화장', '', 
-'꾸밀장', '裝', '조각장', '爿', '선비사', '士', '옷의', '衣', '.', ' ', '.', ' ', '조각 판조로 만든 장롱에서 옷을 꺼내 옷을 입어 자신을 꾸미는 상체가 큰 선비 모습. 장식', '', 
+'꾸밀장', '裝', '조각장', '爿', '선비사', '士', '옷의', '衣', '.', ' ', '.', ' ', '조각 판자로 만든 장롱에서 옷을 꺼내 옷을 입어 자신을 꾸미는 상체가 큰 선비 모습. 장식', '', 
 '막힐장', '障', '언덕부방', '阝', '소리음', '音', '열십', '十', '.', ' ', '.', ' ', '사람이 나무위에 올라서 큰 소리를 치는데 소리가 가로 막혀 소리가 돌아오는 모습. 장애', '', 
 '막을저', '低', '사람인변', '亻', '성씨씨', '氏', '한일', '一', '.', ' ', '.', ' ', '사람이 나무의 뿌리를 뽑아서 뿌리가 더 뻗은 것을 막는다. 저항한다', '', 
 '딸적', '摘', '손수변', '扌', '밑동적', '啇', '.', ' ', '.', ' ', '.', ' ', '손으로 화초의 밑동을 따내는 모습', '', 
@@ -1779,9 +1779,9 @@ var arr = [
 '개척할척', '拓', '손수변', '扌', '돌석', '石', '.', ' ', '.', ' ', '.', ' ', '손으로 돌을 골라 내어 황무지를 개척하여 옥토로 만드는 모습', '', 
 '밟을천', '踐', '발족', '足', '창과', '戈', '창과', '戈', '.', ' ', '.', ' ', '발로 걸어가서 창과 창으로 공격하는 모습. 발로 밟는다. 행동으로 옮긴다. 실천', '', 
 '옮길천', '遷', '덮을아', '覀', '큰대', '大', '병부절2', '㔾', '갈착', '辶', '.', ' ', '사람이 죽간책을 말고 덮개를 덮어서 들고 걸어서 옮기는 모습. 천도, 좌천, 변천', '', 
-'통할철', '撤', '손수변', '扌', '기를육', '育', '칠복', '攵', '.', ' ', '.', ' ', '손에 몽둥이를 들고 산도를 빠져나온 아이의 살을 늘리는 양육하듯 지식을 늘린다는 뜻, 철학', '', 
-'더할첨', '添', '물수변', '氵', '어릴요', '夭', '마음심발', '㣺', '.', ' ', '.', ' ', '아이가 물에서 놀고 더러워져 물을 담그고 물을 첨가하여 씻는 모습. 첨가', '', 
-'뛰어넘을초', '超', '달릴주', '走', '부를소', '召', '.', ' ', '.', ' ', '.', ' ', '숟가락으로 입에 밥을 넣고 달리면 무엇이든 뛰어 넘는다. 초월한다', '', 
+'통할철', '撤', '손수변', '扌', '기를육', '育', '칠복', '攵', '.', ' ', '.', ' ', '손에 몽둥이를 들고 무식을 몰아내고 산도를 빠져나온 아이의 살을 늘리는 양육하듯 지식을 늘린다는 뜻, 철학', '', 
+'더할첨', '添', '물수변', '氵', '어릴요', '夭', '마음심발', '㣺', '.', ' ', '.', ' ', '아이가 물에서 놀고 더러워져 아이를 물에 담그고 물을 첨가하여 씻는 모습. 첨가', '', 
+'뛰어넘을초', '超', '달릴주', '走', '부를소', '召', '.', ' ', '.', ' ', '.', ' ', '숟가락으로 밥을 떠서 입에 먹고 달리면 힘이 솟아 무엇이든 뛰어 넘는다. 초월한다', '', 
 '닿을촉', '觸', '뿔각', '角', '벌레촉', '蜀', '.', ' ', '.', ' ', '.', ' ', '뿔이 닿은 자리 접촉한 자리는 벌레 먹은 듯한 흔적이 남는다', '', 
 '뽑을추', '抽', '손수변', '扌', '말미암을유', '由', '.', ' ', '.', ' ', '.', ' ', '손으로 등잔의 심지를 뽑아 올리는 모습. 추첨', '', 
 '쫓을축', '逐', '갈착', '辶', '돼지시', '豕', '.', ' ', '.', ' ', '.', ' ', '밭에 들어온 돼지를 쫓아낸다. 축구', '', 
@@ -1798,7 +1798,7 @@ var arr = [
 '해질폐', '㡀', '작을소', '小', '멀경', '冂', '작을소', '小', '.', ' ', '.', ' ', '옷감이 조각 조각 난 모습', '', 
 '쌀포2', '包', '쌀포', '勹', '뱀사', '巳', '.', ' ', '.', ' ', '.', ' ', '뱀처럼 생긴 아기가 엄마의 태보에 싸인 모습', '', 
 '피할피', '避', '갈착', '辶', '벽벽', '壁', '.', ' ', '.', ' ', '.', ' ', '도망가던 죄인이 길을 걸어가다 추격자를 피해 벽아래 숨은 모습', '', 
-'멜하2', '荷', '풀초두', '艹', '사람인변', '亻', '더할가', '加', '.', ' ', '.', ' ', '사람이 짐을 더메기 위해 풀로 만든 새기줄로 묶은 모양. 하중', '', 
+'멜하2', '荷', '풀초두', '艹', '사람인변', '亻', '더할가', '加', '.', ' ', '.', ' ', '사람이 짐을 더메기 위해 풀로 만든 새끼줄로 묶은 모양. 하중', '', 
 '벨할', '割', '해칠해', '害', '칼도방', '刂', '.', ' ', '.', ' ', '.', ' ', '집에 칼을 든 사람이 집 사람들을 베어서 칼자국이 나고 비명을 지르는 모습. 할복', '', 
 '해칠해', '害', '집면', '宀', '예쁠봉', '丰', '입구', '口', '.', ' ', '.', ' ', '집에 가시나무를 든 사람이 들어와 사람들을 해쳐서 사람들이 입으로 비명을 지르는 모습', '', 
 '빠질함', '陷', '언덕부방', '阝', '칼도방', '刂', '절구구', '臼', '.', ' ', '.', ' ', '언덕마을에 칼을 들고 오는 강도가 절구 같은 함정에 빠진 모양. 함몰', '', 
@@ -1821,7 +1821,7 @@ var arr = [
 '연이을련', '聯', '귀이', '耳', '작을요', '幺', '작을요', '幺', '쌍상투관', '丱', '.', ' ', '귀뒤로 실같은 머리가 연이어져 상투를 튼 모습. 연속', '', 
 '용렬할렬', '劣', '적을소', '少', '힘력', '力', '.', ' ', '.', ' ', '.', ' ', '힘이 적다. 열성', '', 
 '여러루2', '屢', '주검시', '尸', '꿸관', '串', '가운데중', '中', '여자여', '女', '.', ' ', '언덕같은 다락에 소중한 것의 중간을 꿰어 여러 개를 다락에 얹은 여자 모습. 누차', '', 
-'높을륭', '隆', '언덕부방', '阝', '뒤져올치', '夂', '한일', '一', '날생', '生', '.', ' ', '언덕마을에 사람들이 밟고 지나간 흙을 뚫고 나오는 풀의 모습. 융기', '', 
+'높을륭', '隆', '언덕부방', '阝', '뒤져올치', '夂', '한일', '一', '날생', '生', '.', ' ', '언덕마을에 사람들이 밟고 지나간 흙을 뚫고 나오는 풀로 인해 땅이 융기된 모습. ', '', 
 '아득할막', '漠', '물수변', '氵', '없을막', '莫', '.', ' ', '.', ' ', '.', ' ', '물속은 아무것도 없는 것처럼 아득하다. 막막하다. 사막', '', 
 '없을망', '罔', '산등성이강', '岡', '망할망', '亡', '.', ' ', '.', ' ', '.', ' ', '철강을 캐는 산등성이에 전쟁이 일어나서 칼이 깨진 모양. 망령', '', 
 '산등성이강', '岡', '멀경', '冂', '여덟팔', '八', '한일', '一', '뫼산', '山', '.', ' ', '산에서 철강을 캐는 광산의 입구에 침목을 받친 모습', '', 
@@ -1850,7 +1850,7 @@ var arr = [
 '멀유', '悠', '사람인변', '亻', '뚫을곤', '丨', '칠복', '攵', '마음심', '心', '.', ' ', '사람이 자신을 뚫고 치는 사람으로 부터 마음이 멀어진다. 유구한 역사', '', 
 '넉넉할유', '裕', '옷의변', '衤', '골곡', '谷', '.', ' ', '.', ' ', '.', ' ', '옷을 입은체 계곡속에 들어가면 옷안에 물이 넉넉해진다. 부유, 여유', '', 
 '윤택할윤', '潤', '물수변', '氵', '윤달윤', '閏', '.', ' ', '.', ' ', '.', ' ', '물이 윤달이 한달 더 있는 것 처럼 여유 있게 더 있다. 윤택하다', '', 
-'음란할음', '淫', '물수변', '氵', '손톱조두', '爫', '북방임', '壬', '.', ' ', '.', ' ', '실패와 같이 생긴 사람몸을 손으로 음란하게 만지면 흥분한 사람이 땀이 난다. ', '', 
+'음란할음', '淫', '물수변', '氵', '손톱조두', '爫', '북방임', '壬', '.', ' ', '.', ' ', '실패와 같이 생긴 사람몸을 손으로 만져 땀이 나게하는 음란 행위 ', '', 
 '섞일잡', '雜', '돼지머리두', '亠', '사람인', '人', '사람인', '人', '나무목', '木', '새추', '隹', '나무에 작은 새들과 큰 새가 같이 섞여 있는 모양. 교잡, 잡종', '', 
 '고요할적', '寂', '집면', '宀', '콩숙', '尗', '또우', '又', '.', ' ', '.', ' ', '집안이 고요해서 손에 잡았던 콩이 떨어지면 소리가 들린다. 적막', '', 
 '가지런할정', '整', '묶을속', '束', '칠복', '攵', '바를정', '正', '.', ' ', '.', ' ', '묶고 쳐내고 도시 사거리 처럼 반듯하게 정리하는 모습. 정리정돈', '', 
@@ -2017,6 +2017,7 @@ var arr = [
 '발자국유', '禸', '멀경', '冂', '사사로울사', '厶', '.', ' ', '.', ' ', '.', ' ', '발바닥 모양이 발자국에 새겨진 모양', '', 
 '풀훼', '卉', '열십', '十', '받들공', '廾', '.', ' ', '.', ' ', '.', ' ', '풀이 무성한 모양', '', 
 '추할추', '吜', '입구', '口', '소축', '丑', '.', ' ', '.', ' ', '.', ' ', '입으로 짐승의 발톱같이 험한 말을하니 추하다', '', 
+'도끼월', '鉞', '쇠금', '金', '천간무', '戊', '.', ' ', '.', ' ', '.', ' ', '금속으로 되어 창날같은 도끼', '', 
 
 
 
