남녘병 수정

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ var arr = [
 '차례제', '第', '대죽', '竹', '아우제', '弟', '.', ' ', '.', ' ', '.', ' ', '아우들이 가지고 노는 대나무 말도 차례대로 타야 한다. 제 1 장', '', 
 '갑옷갑', '甲', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '갑옷을 벗어서 갑옷 걸이에 걸어 놓은 모양', '', 
 '새을', '乙', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '새의 머리 목 몸통 모양', '', 
-'남녘병', '丙', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '남쪽 지방에서 많이 잡히던 큰 물고기의 꼬리 지느르미 모양', '', 
+'남녘병', '丙', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '남쪽 지방에서 많이 잡히던 큰 물고기의 꼬리 지느러미 모양', '', 
 '고무래정', '丁', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '곡식을 말릴 때 곡식을 넓게 펴는 고무래 모양', '', 
 '천간무', '戊', '삐침별', '丿', '창과', '戈', '.', ' ', '.', ' ', '.', ' ', '성을 공격할 때 창을 들고 공격하는 모습', '', 
 '몸기', '己', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '.', ' ', '몸을 써서 무언가 하느라 몸을 구부린 모양', '', 
